Fix the width of the preview if the picture is out of the screen
Большие по ширине превьюшки картинок теперь не дожны уползать за пределы
окна/экрана.

--- a/style/imports/upfiles.css
+++ b/style/imports/upfiles.css
@@ -30,8 +30,9 @@ ul#upf-list {
 }
 
 .upf-file img {
-	height: 100%;
+	max-height: 100%;
 	border: none;
+	max-width: 100%;
 }
 
 #upf-list .upf-name {
